@@ -124,7 +124,7 @@ void Console::log(ExecState* exec, const List& arguments)
     page->inspectorController()->addMessageToConsole(JSMessageSource, LogMessageLevel, exec, arguments, 0, url);
 }
 
-void Console::profile(KJS::ExecState*, const KJS::List&) const
+void Console::profile(const String& /*title*/) const
 {
     // FIXME: Figure out something to do with the title passed in so that it can
     // be displayed by the inspector.
